# marmot_dart

./: .gitignore  CHANGELOG.md  LICENSE  README.md  justfile  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
cargokit/gradle/: plugin.gradle
example/: README.md  pubspec.yaml
example/android/: build.gradle.kts
example/android/app/: build.gradle.kts
example/integration_test/: marmot_test.dart
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/lib/models/: chat_message.dart  device.dart
example/lib/services/: blossom_service.dart  relay_service.dart
example/lib/viewmodels/: device_viewmodel.dart  group_viewmodel.dart
example/lib/views/: device_tab.dart  group_card.dart  settings_tab.dart
example/lib/widgets/: provider.dart
example/linux/: CMakeLists.txt
example/linux/flutter/: generated_plugins.cmake
example/windows/: CMakeLists.txt
ios/: marmot_dart.podspec
ios/Flutter/: Generated.xcconfig  flutter_export_environment.sh
ios/marmot_dart/: Package.swift
lib/: marmot_dart.dart
lib/src/: _ensure.dart  groups.dart  identity.dart  key_packages.dart  marmot.dart  media.dart  messages.dart
linux/: CMakeLists.txt
macos/: marmot_dart.podspec
macos/marmot_dart/: Package.swift
rust/: Cargo.toml
rust/src/: convert.rs  frb_generated.rs  lib.rs  state.rs
rust/src/api/: error.rs  groups.rs  identity.rs  init.rs  key_packages.rs  media.rs  messages.rs  mod.rs
test/: marmot_dart_test.dart
windows/: CMakeLists.txt
(+34 files in other folders)
